--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
 </head>
 <body class="bg-green-900 h-screen flex flex-col items-center justify-center text-white p-6 relative overflow-hidden">
 
-    <div class="absolute inset-0 opacity-10 pointer-events-none" style="background-image: url('data:image/svg+xml,...');"></div>
+    <script>
+        const GLOBAL_MAINTENANCE = false; // <--- METTI TRUE PER CHIUDERE TUTTO IL SITO
+    </script>
 
-    <div class="z-10 text-center w-full max-w-md">
+    <div class="absolute inset-0 opacity-10 pointer-events-none" style="background-image: url('data:image/svg+xml,%3Csvg width=\'60\' height=\'60\' viewBox=\'0 0 60 60\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'none\' fill-rule=\'evenodd\'%3E%3Cg fill=\'%23ffffff\' fill-opacity=\'1\'%3E%3Cpath d=\'M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2v6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z\'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E');"></div>
+
+    <div id="main-portal" class="z-10 text-center w-full max-w-md transition-all duration-500">
         <div class="mb-8">
-            <img src="icon-192.png" alt="Logo" class="w-24 h-24 mx-auto mb-4 drop-shadow-xl animate-bounce">
+            <img src="icon-192.png" alt="Logo" class="h-24 w-24 mx-auto mb-4 drop-shadow-2xl hover:rotate-12 transition transform duration-500">
             <h1 class="text-4xl font-extrabold tracking-widest text-yellow-400">AZIMUT.ARCH</h1>
             <p class="text-green-200 font-mono text-sm mt-2">Scegli la tua destinazione</p>
         </div>
 
         <div class="grid grid-cols-1 gap-4">
-            <a href="armadio.html" class="btn-card bg-white text-green-900 p-6 rounded-2xl shadow-xl flex items-center justify-between border-b-8 border-green-700 hover:bg-gray-50 no-underline">
+            <a href="armadio.html" class="btn-card bg-white text-green-900 p-6 rounded-2xl shadow-xl flex items-center justify-between border-b-8 border-green-700 hover:bg-gray-50 no-underline transition transform active:scale-95">
                 <div class="text-left">
                     <h2 class="text-2xl font-extrabold uppercase">Armadio</h2>
                     <p class="text-xs text-gray-500 font-bold">MATERIALE & PATACCHE</p>
@@ -34,24 +38,37 @@
                 <span class="text-4xl">🎒</span>
             </a>
 
-            <a href="cambusa.html" class="btn-card bg-white text-orange-900 p-6 rounded-2xl shadow-xl flex items-center justify-between border-b-8 border-orange-700 hover:bg-gray-50 no-underline">
+            <a href="cambusa.html" class="btn-card bg-white text-orange-900 p-6 rounded-2xl shadow-xl flex items-center justify-between border-b-8 border-orange-700 hover:bg-gray-50 no-underline transition transform active:scale-95">
                 <div class="text-left">
                     <h2 class="text-2xl font-extrabold uppercase">Cambusa</h2>
                     <p class="text-xs text-gray-500 font-bold">VETTOVAGLIE & CIBO</p>
                 </div>
                 <span class="text-4xl">🥘</span>
             </a>
-            
-            </div>
+        </div>
 
-        <div class="mt-12 text-center opacity-60">
-            <p class="text-[10px] font-mono">"Estote Parati"</p>
+        <div class="mt-12 text-center">
+            <p class="text-[10px] text-green-400 uppercase tracking-widest">Scout Tagliamento 1</p>
+        </div>
+    </div>
+
+    <div id="global-maintenance-screen" class="hidden absolute inset-0 z-50 bg-gray-900 flex flex-col items-center justify-center p-6 text-center">
+        <div class="bg-white text-gray-800 p-8 rounded-3xl shadow-2xl max-w-sm w-full border-b-8 border-red-600">
+            <div class="text-6xl mb-4 animate-pulse">⛔</div>
+            <h2 class="text-2xl font-extrabold text-red-600 mb-2">Portale Chiuso</h2>
+            <p class="text-sm text-gray-500 mb-6">Stiamo facendo un check-up completo al sistema.</p>
+            <div class="text-xs font-mono bg-gray-100 p-2 rounded text-gray-500">Torna più tardi.</div>
+            
+            <button onclick="document.getElementById('global-maintenance-screen').classList.add('hidden')" class="mt-6 text-[10px] text-gray-300 hover:text-red-500 uppercase tracking-widest">
+                🔓 Accesso Tecnico
+            </button>
         </div>
     </div>
 
     <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('./sw.js');
+        // Logica applicazione manutenzione all'avvio
+        if (typeof GLOBAL_MAINTENANCE !== 'undefined' && GLOBAL_MAINTENANCE) {
+            document.getElementById('global-maintenance-screen').classList.remove('hidden');
         }
     </script>
 </body>
