--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         function verifyTechAccess() {
             const pass = document.getElementById('tech-pass').value;
             // PASSWORD SEMPLICE: "admin" (Puoi cambiarla qui sotto)
-            if (pass === 'admin') {
+            if (pass === 'el.Archivio12') {
                 document.getElementById('global-maintenance-screen').classList.add('hidden');
             } else {
                 document.getElementById('tech-error').classList.remove('hidden');
