--- a/armadio.html
+++ b/armadio.html
@@ -118,7 +118,7 @@
             <p class="text-gray-500 mb-6">Stiamo lucidando gli scarponi e contando le patacche.</p>
             <div class="text-xs font-mono bg-green-50 p-3 rounded text-green-800">Manutenzione in corso.</div>
             
-            <button onclick="ui.modal('login-modal')" class="mt-8 text-gray-300 text-xs hover:text-green-600 transition underline">Accesso Quartiermastro</button>
+            <button onclick="ui.modal('login-modal')" class="mt-8 text-gray-300 text-xs hover:text-green-600 transition underline">Accesso Admin</button>
         </div>
     </section>
         <section id="view-shop" class="hidden fade-in">
