--- a/cambusa.html
+++ b/cambusa.html
@@ -208,6 +208,9 @@
              <div class="lg:col-span-1 space-y-2">
                 <button onclick="admin.tab('approvals')" class="w-full text-left p-3 rounded-xl bg-white font-bold border-l-4 border-blue-500 shadow-sm hover:bg-blue-50 transition">🔔 Approvazioni <span id="badge-approvals" class="bg-red-500 text-white text-[10px] px-2 rounded-full hidden">!</span></button>
                 <button onclick="admin.tab('stock')" class="w-full text-left p-3 rounded-xl bg-white font-bold border-l-4 border-orange-500 shadow-sm hover:bg-orange-50 transition">✏️ Gestione Dispensa</button>
+                <button onclick="admin.tab('recipes')" class="w-full text-left p-3 rounded-xl bg-white font-bold border-l-4 border-red-500 shadow-sm hover:bg-red-50 transition">
+                    📖 Gestione Ricette
+                </button>
                 <button onclick="admin.tab('movements')" class="w-full text-left p-3 rounded-xl bg-white font-bold border-l-4 border-teal-500 shadow-sm hover:bg-teal-50 transition">📊 Movimenti</button>
             </div>
 
@@ -232,6 +235,16 @@
                         <p class="text-sm text-yellow-800">Qui trovi i nuovi prodotti inseriti dagli utenti. Correggi se necessario e approva.</p>
                     </div>
                     <div id="admin-approval-list" class="space-y-3"></div>
+                </div>
+                <div id="admin-tab-recipes" class="admin-tab hidden bg-white p-6 rounded-xl shadow-md border border-red-100">
+                    <div class="flex justify-between items-center mb-4 border-b border-red-100 pb-2">
+                        <h3 class="font-bold text-xl text-red-900">Gestione Ricette</h3>
+                        <button onclick="recipes.openModal()" class="bg-red-600 text-white text-xs font-bold px-3 py-2 rounded hover:bg-red-700 shadow flex items-center gap-1">
+                            <span>+</span> NUOVA
+                        </button>
+                    </div>
+                    <div id="admin-recipes-list" class="overflow-x-auto">
+                        </div>
                 </div>
             </div>
         </div>
