--- a/cambusa.html
+++ b/cambusa.html
@@ -363,7 +363,7 @@
         </div>
     </div>
     <div id="modal-recipe" class="hidden fixed inset-0 bg-black/50 z-[200] flex items-center justify-center p-4 backdrop-blur-sm">
-        <div class="bg-white rounded-xl shadow-2xl w-full max-w-2xl p-0 h-[85vh] flex flex-col overflow-hidden relative">
+        <div class="bg-white rounded-xl shadow-2xl w-full max-w-2xl p-0 h-auto max-h-[95vh] flex flex-col overflow-hidden relative m-4">
             
             <div class="p-4 border-b bg-red-50 flex justify-between items-center shrink-0">
                 <h3 class="font-bold text-xl text-red-900">👨‍🍳 Crea/Modifica Ricetta</h3>
