--- a/cambusa.html
+++ b/cambusa.html
@@ -385,18 +385,23 @@
 
                     <div class="bg-red-50 p-3 rounded-lg border border-red-100">
                         <label class="text-[10px] font-bold text-red-800 uppercase mb-1 block">Aggiungi Ingrediente</label>
-                        <div class="flex gap-2">
-                            <input type="text" id="ing-input-name" placeholder="Nome (es. Uova)" class="flex-grow p-2 border rounded text-sm outline-none">
-                            <input type="number" step="0.1" id="ing-input-qty" placeholder="Qtà" class="w-16 p-2 border rounded text-sm text-center outline-none">
-                            <select id="ing-input-unit" class="w-16 p-2 border rounded text-sm bg-white outline-none">
-                                <option value="pz">pz</option>
-                                <option value="kg">kg</option>
-                                <option value="gr">gr</option>
-                                <option value="lt">lt</option>
-                                <option value="ml">ml</option>
-                                <option value="qb">qb</option>
-                            </select>
-                            <button onclick="recipes.addIngFromInput()" class="bg-red-600 text-white font-bold px-3 rounded shadow hover:bg-red-700">+</button>
+                        
+                        <div class="flex flex-col md:flex-row gap-2">
+                            <input type="text" id="ing-input-name" placeholder="Nome (es. Uova)" class="w-full p-2 border rounded text-sm outline-none font-bold text-gray-700">
+                            
+                            <div class="flex gap-2">
+                                <input type="number" step="0.1" id="ing-input-qty" placeholder="Qtà" class="w-20 p-2 border rounded text-sm text-center outline-none">
+                                <select id="ing-input-unit" class="w-20 p-2 border rounded text-sm bg-white outline-none">
+                                    <option value="pz">pz</option>
+                                    <option value="kg">kg</option>
+                                    <option value="gr">gr</option>
+                                    <option value="lt">lt</option>
+                                    <option value="ml">ml</option>
+                                    <option value="qb">qb</option>
+                                    <option value="conf">conf</option>
+                                </select>
+                                <button onclick="recipes.addIngFromInput()" class="bg-red-600 text-white font-bold px-4 rounded shadow hover:bg-red-700 flex-grow md:flex-grow-0">+</button>
+                            </div>
                         </div>
                     </div>
                 </div>
