--- a/cambusa.html
+++ b/cambusa.html
@@ -19,6 +19,12 @@
         @keyframes fadeIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
         .scrollbar-hide::-webkit-scrollbar { display: none; }
         .filter-btn.active { background-color: #c2410c; color: white; border-color: #c2410c; }
+        @media print {
+            body * { visibility: hidden; }
+            #planner-step-list, #planner-step-list * { visibility: visible; }
+            #planner-step-list { position: absolute; left: 0; top: 0; width: 100%; box-shadow: none; border: none; }
+            button { display: none !important; }
+        }
     </style>
 </head>
 <body class="text-gray-800 h-screen flex flex-col overflow-hidden">
