--- a/cambusa.html
+++ b/cambusa.html
@@ -446,10 +446,10 @@
                         </div>
                         
                         <div class="mb-4">
-                            <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Tipo di pasto</label>
+                            <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Categoria</label>
                             <select id="rec-cat" class="w-full p-3 border rounded-xl font-bold bg-white text-gray-800">
-                                <option value="pasti">Pranzo / Cena (Salato)</option>
-                                <option value="snack">Colazione / Merenda (Dolce/Snack)</option>
+                                <option value="pasti">Pranzo / Cena</option>
+                                <option value="snack">Colazione / Merenda</option>
                             </select>
                         </div>
                         <div class="col-span-1">
