--- a/cambusa.html
+++ b/cambusa.html
@@ -348,10 +348,11 @@
             
             <label class="text-xs font-bold text-gray-500 uppercase">Categoria</label>
             <select id="item-cat" class="w-full p-2 border rounded mb-3 bg-white">
+                <option value="dispensa">Dispensa Generale</option>
                 <option value="colazione">Colazione</option>
-                <option value="pranzo_cena">Pranzo/Cena</option>
-                <option value="condimenti">Condimenti</option>
-                <option value="extra">Extra</option>
+                <option value="merenda">Merenda</option> <option value="pranzo">Pranzo</option>
+                <option value="cena">Cena</option>
+                <option value="extra">Extra/Altro</option>
             </select>
 
             <div class="flex gap-2 mb-3">
