--- a/cambusa.html
+++ b/cambusa.html
@@ -346,13 +346,13 @@
             <label class="text-xs font-bold text-gray-500 uppercase">Nome</label>
             <input type="text" id="item-name" class="w-full p-2 border rounded mb-3 font-bold">
             
-            <label class="text-xs font-bold text-gray-500 uppercase">Categoria</label>
-            <select id="item-cat" class="w-full p-2 border rounded mb-3 bg-white">
-                <option value="dispensa">Dispensa Generale</option>
+           <label class="text-xs font-bold text-gray-500 uppercase">Categoria</label>
+            <select id="new-res-cat" class="w-full p-2 border rounded mb-6 bg-white">
                 <option value="colazione">Colazione</option>
-                <option value="merenda">Merenda</option> <option value="pranzo">Pranzo</option>
-                <option value="cena">Cena</option>
-                <option value="extra">Extra/Altro</option>
+                <option value="pasti">Pasti (Pranzo/Cena)</option>
+                <option value="condimenti">Condimenti</option>
+                <option value="merenda">Merenda</option>
+                <option value="extra">Extra</option>
             </select>
 
             <div class="flex gap-2 mb-3">
@@ -418,11 +418,11 @@
             </div>
 
             <label class="text-xs font-bold text-gray-500 uppercase">Categoria</label>
-            <select id="new-res-cat" class="w-full p-2 border rounded mb-6 bg-white">
+            <select id="item-cat" class="w-full p-2 border rounded mb-3 bg-white">
                 <option value="colazione">Colazione</option>
-                <option value="pranzo_cena">Pranzo/Cena</option>
-                <option value="condimenti">Condimenti</option>
                 <option value="merenda">Merenda</option>
+                <option value="pasti">Pasti (Pranzo/Cena)</option>
+                <option value="condimenti">Condimenti</option>
                 <option value="extra">Extra</option>
             </select>
 
@@ -520,7 +520,7 @@
                         <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Categoria *</label>
                         <select id="new-prod-cat" class="w-full p-3 border-2 border-gray-200 rounded-xl bg-white text-sm font-bold outline-none focus:border-blue-500">
                             <option value="colazione">Colazione</option>
-                            <option value="pranzo_cena">Pasti</option>
+                            <option value="pasti">Pasti (Pranzo/Cena)</option>
                             <option value="condimenti">Condimenti</option>
                             <option value="merenda">Merenda</option>
                             <option value="extra">Extra</option>
