--- a/cambusa.html
+++ b/cambusa.html
@@ -347,11 +347,11 @@
             <input type="text" id="item-name" class="w-full p-2 border rounded mb-3 font-bold">
             
            <label class="text-xs font-bold text-gray-500 uppercase">Categoria</label>
-            <select id="new-res-cat" class="w-full p-2 border rounded mb-6 bg-white">
+            <select id="item-cat" class="w-full p-2 border rounded mb-3 bg-white">
                 <option value="colazione">Colazione</option>
+                <option value="merenda">Merenda</option>
                 <option value="pasti">Pasti (Pranzo/Cena)</option>
                 <option value="condimenti">Condimenti</option>
-                <option value="merenda">Merenda</option>
                 <option value="extra">Extra</option>
             </select>
 
@@ -421,7 +421,7 @@
             <select id="item-cat" class="w-full p-2 border rounded mb-3 bg-white">
                 <option value="colazione">Colazione</option>
                 <option value="merenda">Merenda</option>
-                <option value="pasti">Pasti (Pranzo/Cena)</option>
+                <option value="pasti">Pasti</option>
                 <option value="condimenti">Condimenti</option>
                 <option value="extra">Extra</option>
             </select>
@@ -455,8 +455,8 @@
                     <div class="md:col-span-2">
                         <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Categoria Menu</label>
                         <select id="rec-cat" class="w-full p-3 border border-gray-200 rounded-xl font-bold text-gray-800 focus:border-orange-500 outline-none bg-white">
-                            <option value="pasti">🍝 Pranzo / Cena (Salato)</option>
-                            <option value="snack">🍩 Colazione / Merenda (Dolce/Snack)</option>
+                            <option value="pasti">🍝 Pasti</option>
+                            <option value="snack">🍩 Colazione / Merenda (Snack)</option>
                         </select>
                     </div>
                 </div>
@@ -520,7 +520,7 @@
                         <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Categoria *</label>
                         <select id="new-prod-cat" class="w-full p-3 border-2 border-gray-200 rounded-xl bg-white text-sm font-bold outline-none focus:border-blue-500">
                             <option value="colazione">Colazione</option>
-                            <option value="pasti">Pasti (Pranzo/Cena)</option>
+                            <option value="pasti">Pasti</option>
                             <option value="condimenti">Condimenti</option>
                             <option value="merenda">Merenda</option>
                             <option value="extra">Extra</option>
