--- a/cambusa.html
+++ b/cambusa.html
@@ -455,8 +455,8 @@
                     <div class="md:col-span-2">
                         <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Categoria Menu</label>
                         <select id="rec-cat" class="w-full p-3 border border-gray-200 rounded-xl font-bold text-gray-800 focus:border-orange-500 outline-none bg-white">
-                            <option value="pasti">🍝 Pasti</option>
-                            <option value="snack">🍩 Colazione / Merenda (Snack)</option>
+                            <option value="pasti">Pasti</option>
+                            <option value="snack">Colazioni / Merende</option>
                         </select>
                     </div>
                 </div>
@@ -466,9 +466,6 @@
                 <div class="mb-4">
                     <div class="flex justify-between items-end mb-2">
                         <label class="text-xs font-bold text-gray-500 uppercase">Ingredienti</label>
-                        <div class="text-[10px] text-orange-600 bg-orange-50 px-2 py-1 rounded border border-orange-100">
-                            Cerca prodotti in dispensa
-                        </div>
                     </div>
     
                     <div class="flex gap-2 mb-3 bg-gray-50 p-2 rounded-xl border border-gray-200">
