--- a/cambusa.html
+++ b/cambusa.html
@@ -288,7 +288,12 @@
                 </div>
 
                 <div id="admin-tab-stock" class="admin-tab hidden bg-white p-6 rounded-xl shadow-md border border-orange-100">
-                     <h3 class="font-bold text-xl text-orange-900 mb-4">📦 Inventario Completo</h3>
+                     <div class="flex justify-between items-center mb-4">
+                        <h3 class="font-bold text-xl text-orange-900">📦 Inventario (<span id="stock-count">0</span>)</h3>
+                        <button onclick="ui.modal('modal-new-product')" class="bg-orange-600 text-white text-xs font-bold px-3 py-2 rounded hover:bg-orange-700 shadow flex items-center gap-1">
+                            <span>+</span> NUOVO
+                        </button>
+                     </div>
                      <input type="text" id="admin-search" onkeyup="admin.filterStock()" placeholder="Cerca oggetto..." class="w-full p-2 border rounded mb-4 text-sm">
                      <div id="admin-list" class="divide-y max-h-[60vh] overflow-y-auto pr-2"></div>
                 </div>
