--- a/cambusa.html
+++ b/cambusa.html
@@ -275,6 +275,7 @@
              <div class="lg:col-span-1 space-y-2">
                 <button onclick="admin.tab('approvals')" class="w-full text-left p-3 rounded-xl bg-white font-bold border-l-4 border-blue-500 shadow-sm hover:bg-blue-50 transition">🔔 Approvazioni <span id="badge-approvals" class="bg-red-500 text-white text-[10px] px-2 rounded-full hidden">!</span></button>
                 <button onclick="admin.tab('stock')" class="w-full text-left p-3 rounded-xl bg-white font-bold border-l-4 border-orange-500 shadow-sm hover:bg-orange-50 transition">✏️ Gestione Dispensa</button>
+                <button onclick="admin.tab('restock-admin')" class="w-full text-left p-3 rounded-xl bg-white font-bold border-l-4 border-yellow-600 shadow-sm hover:bg-yellow-50 transition">🚛 Rifornimento</button>
                 <button onclick="admin.tab('recipes')" class="w-full text-left p-3 rounded-xl bg-white font-bold border-l-4 border-red-500 shadow-sm hover:bg-red-50 transition">
                     📖 Gestione Ricette
                 </button>
@@ -297,7 +298,12 @@
                      <input type="text" id="admin-search" onkeyup="admin.filterStock()" placeholder="Cerca oggetto..." class="w-full p-2 border rounded mb-4 text-sm">
                      <div id="admin-list" class="divide-y max-h-[60vh] overflow-y-auto pr-2"></div>
                 </div>
-
+                <div id="admin-tab-restock-admin" class="admin-tab hidden bg-white p-6 rounded-xl shadow-md border border-yellow-200">
+                    <h3 class="font-bold text-xl text-orange-900 mb-4">Rifornimento Rapido Admin</h3>
+                    <input type="text" id="admin-restock-search" onkeyup="admin.filterRestock()" placeholder="🔍 Cerca prodotto..." class="w-full p-3 border rounded-xl mb-4 bg-orange-50">
+                    <div id="admin-restock-list" class="space-y-3 max-h-[50vh] overflow-y-auto"></div>
+                    <button onclick="restock.submitUpdates()" class="w-full mt-4 bg-green-600 text-white font-bold py-3 rounded-xl shadow-lg">SALVA MODIFICHE</button>
+                </div>
                 <div id="admin-tab-movements" class="admin-tab hidden bg-white p-6 rounded-xl shadow-md border border-teal-100">
                      <h3 class="font-bold text-xl text-teal-900 mb-4">📜 Registro Movimenti</h3>
                      <div id="movements-list" class="space-y-2"></div>
@@ -310,7 +316,7 @@
                 </div>
                 <div id="admin-tab-recipes" class="admin-tab hidden bg-white p-6 rounded-xl shadow-md border border-red-100">
                     <div class="flex justify-between items-center mb-4 border-b border-red-100 pb-2">
-                        <h3 class="font-bold text-xl text-red-900">Gestione Ricette</h3>
+                        <h3 class="font-bold text-xl text-red-900">Gestione Ricette (<span id="admin-recipe-count">0</span>)</h3>
                         <button onclick="recipes.openModal()" class="bg-red-600 text-white text-xs font-bold px-3 py-2 rounded hover:bg-red-700 shadow flex items-center gap-1">
                             <span>+</span> NUOVA
                         </button>
@@ -368,11 +374,8 @@
                 <div class="w-1/3">
                     <label class="text-xs font-bold text-gray-500 uppercase">Unità</label>
                     <select id="item-unit" class="w-full p-2 border rounded bg-white text-sm">
-                        <option value="pz">Pz</option>
-                        <option value="kg">Kg</option>
-                        <option value="lt">Lt</option>
-                        <option value="hg">Hg</option>
-                        <option value="conf">Conf</option>
+                        <option value="pz">Pz</option><option value="kg">Kg</option><option value="lt">Lt</option>
+                        <option value="hg">Hg</option><option value="ml">ml</option><option value="gr">gr</option><option value="conf">Conf</option>
                     </select>
                 </div>
                 <div class="w-1/3">
@@ -417,7 +420,8 @@
                 <div>
                     <label class="text-xs font-bold text-gray-500 uppercase">Unità</label>
                     <select id="new-res-unit" class="w-full p-2 border rounded bg-white">
-                         <option value="pz">Pezzi</option><option value="kg">Kg</option><option value="lt">Litri</option><option value="conf">Conf</option>
+                         <option value="pz">Pezzi</option><option value="kg">Kg</option><option value="lt">Litri</option>
+                         <option value="ml">ml</option><option value="gr">gr</option><option value="conf">Conf</option>
                     </select>
                 </div>
             </div>
@@ -481,10 +485,7 @@
                             class="w-20 p-2 bg-white border border-gray-200 rounded-lg text-sm font-semibold outline-none text-center focus:border-orange-500">
                         
                         <select id="new-ing-unit" class="w-20 p-2 bg-white border border-gray-200 rounded-lg text-xs font-bold outline-none text-gray-600">
-                            <option value="pz">pz</option>
-                            <option value="kg">kg</option>
-                            <option value="gr">gr</option>
-                            <option value="lt">lt</option>
+                            <option value="pz">pz</option><option value="kg">kg</option><option value="gr">gr</option><option value="lt">lt</option><option value="ml">ml</option>
                         </select>
     
                         <button onclick="recipes.addIngredient()" class="bg-orange-500 text-white w-10 h-10 rounded-lg shadow-sm hover:bg-orange-600 flex items-center justify-center font-bold text-lg">+</button>
@@ -531,9 +532,8 @@
                     <div>
                         <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Unità *</label>
                         <select id="new-prod-unit" class="w-full p-3 border-2 border-gray-200 rounded-xl bg-white text-sm font-bold outline-none focus:border-blue-500">
-                            <option value="pz">Pezzi</option>
-                            <option value="kg">Kg</option>
-                            <option value="lt">Litri</option>
+                            <option value="pz">Pezzi</option><option value="kg">Kg</option><option value="lt">Litri</option>
+                            <option value="ml">ml</option><option value="gr">gr</option><option value="conf">Conf</option>
                         </select>
                     </div>
                 </div>
