--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
                 </div>
                 <span class="text-4xl">🥘</span>
             </a>
+
+            <a href="magazzino.html" class="btn-card bg-white text-blue-900 p-6 rounded-2xl shadow-xl flex items-center justify-between border-b-8 border-blue-700 hover:bg-gray-50 no-underline">
+                <div class="text-left">
+                    <h2 class="text-2xl font-extrabold uppercase">Magazzino</h2>
+                    <p class="text-xs text-gray-500 font-bold">ATTREZZATURA & TENDE</p>
+                </div>
+                <span class="text-4xl">📦</span>
+            </a>
         </div>
 
         <div class="mt-12 text-center opacity-60">
