--- a/armadio.html
+++ b/armadio.html
@@ -81,8 +81,8 @@
                         <span>📲</span> Installa App
                     </button>
 
-                    <button onclick="window.location.href='cambusa.html'" class="text-left w-full text-orange-100 font-bold text-sm hover:text-white transition flex items-center justify-between gap-3 border border-orange-500 bg-orange-900/50 p-3 rounded-lg shadow-inner mt-4">
-                        <span class="flex items-center gap-2"><span>🥘</span> Vai in Cambusa</span>
+                    <button onclick="window.location.href='index.html'" class="text-left w-full text-green-100 font-bold text-sm hover:text-white transition flex items-center justify-between gap-3 border border-green-500 bg-green-900/50 p-3 rounded-lg shadow-inner mt-4">
+                        <span class="flex items-center gap-2"><span>🏠</span> Vai alla Home</span>
                         <span class="text-lg">→</span>
                     </button>
                 </div>
@@ -95,6 +95,11 @@
                             
                             <button onclick="window.location.href='cambusa.html'" class="w-full bg-orange-700 hover:bg-orange-600 text-white text-xs font-bold py-3 px-3 rounded-lg flex items-center justify-between shadow-md transition mb-3 border border-orange-500">
                                 <span class="flex items-center gap-2"><span>🥘</span> Q.G. CAMBUSA</span>
+                                <span>➡</span>
+                            </button>
+
+                            <button onclick="window.location.href='magazzino.html'" class="w-full bg-blue-700 hover:bg-blue-600 text-white text-xs font-bold py-3 px-3 rounded-lg flex items-center justify-between shadow-md transition mb-3 border border-blue-500">
+                                <span class="flex items-center gap-2"><span>📦</span> Q.G. MAGAZZINO</span>
                                 <span>➡</span>
                             </button>
 
