--- a/cambusa.html
+++ b/cambusa.html
@@ -79,8 +79,8 @@
                             <span>🍽️</span> Crea Menu & Spesa
                         </button>
                         
-                        <button onclick="window.location.href='armadio.html'" class="text-left w-full text-green-100 font-bold text-sm hover:text-white transition flex items-center justify-between gap-3 border border-green-500 bg-green-900/50 p-3 rounded-lg shadow-inner mt-4">
-                            <span class="flex items-center gap-2"><span>🎒</span> Vai all'Armadio</span>
+                        <button onclick="window.location.href='index.html'" class="text-left w-full text-orange-100 font-bold text-sm hover:text-white transition flex items-center justify-between gap-3 border border-orange-400 bg-orange-900/50 p-3 rounded-lg shadow-inner mt-4">
+                            <span class="flex items-center gap-2"><span>🏠</span> Vai alla Home</span>
                             <span class="text-lg">→</span>
                         </button>
                     </div>
@@ -96,6 +96,11 @@
                             
                             <button onclick="window.location.href='armadio.html'" class="w-full bg-green-800 hover:bg-green-700 text-white text-xs font-bold py-3 px-3 rounded-lg flex items-center justify-between shadow-md transition mb-3 border border-green-600">
                                 <span class="flex items-center gap-2"><span>🎒</span> Q.G. ARMADIO</span>
+                                <span>➡</span>
+                            </button>
+
+                            <button onclick="window.location.href='magazzino.html'" class="w-full bg-blue-700 hover:bg-blue-600 text-white text-xs font-bold py-3 px-3 rounded-lg flex items-center justify-between shadow-md transition mb-3 border border-blue-500">
+                                <span class="flex items-center gap-2"><span>📦</span> Q.G. MAGAZZINO</span>
                                 <span>➡</span>
                             </button>
 
